[package]
name = "crypto"
version = "0.1.0"
authors = ["paul_cresswell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "^0.4"
anyhow = "^1.0"
num-bigint = "^0.2"
num-traits = "^0.2.10"
bitstream-io = "^0.8.4"
rand = "^0.7.3"
