[package]
name = "crypto"
version = "0.1.0"
authors = ["paul_cresswell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
thiserror = "1.0"
num-bigint = "0.4.3"
num-traits = "0.2"
bitstream-io = "1.5.0"
rand = "0.8"
rayon = "1.5"
hex-literal = "0.3.4"
itertools = "0.10.2"
openssl = "0.10.41"
